Fix a layout bug when there are 3 columns.

--- a/src/style.scss
+++ b/src/style.scss
@@ -65,7 +65,7 @@ body {
 
 @media (min-width: 768px) {
   .item {
-    width: 33%;
+    width: calc(100% / 3);
   }
 }
 
